2014-10-17  pads  <pads@myhouseyourhouse.net>

    * src/net/yourhouse/myhouse/www/RadioApp.java:
    * res/layout/main.xml:
    - Add progress spinner to button when buffering.

    * src/net/yourhouse/myhouse/www/RadioService.java:
    - Refactor: Set show name from here in all scenarios.

2014-09-08  pads  <pads@myhouseyourhouse.net>

    * src/net/yourhouse/myhouse/www/RadioApp.java:
    * assets/shoutbox.html:
    * res/values/strings.xml:
    - Replace Shoutbox web page with local version (using yourshoutbox.com script).

2014-09-08  pads  <pads@myhouseyourhouse.net>

    * AndroidManifest.xml:
    - Remove SD card unmount and write to external storage permissions.

    * src/net/yourhouse/myhouse/www/RadioApp.java:
    - Remove remaining Nagare references.
    - Remove error handling for writing to SD card.

2014-09-07  pads  <pads@myhouseyourhouse.net>

    * AndroidManifest.xml:
    - Bump version to 2.0.0 (code 6)
    - Use new native media player service.

    * src/net/yourhouse/myhouse/www/IRadioService.aidl:
	* src/net/yourhouse/myhouse/www/RadioApp.java:
	* src/net/yourhouse/myhouse/www/RadioService.java:
	- Replace Nagare Shoutcast service with native media player service.

2014-09-06  pads  <pads@myhouseyourhouse.net>

    Migrate from Subversion repository.

    * AndroidManifest.xml:
    - Bump min SDK version to 8 (2.2 Froyo).

    * build.gradle:
    - Use Gradle for building the project.

    * .gitignore:
    - Ignore generated files.

2013-08-05  pads  <pads@myhouseyourhouse.net>

    * AndroidManifest.xml:
    - Bump version to 1.0.4
    - Renamed package to publish as new application.

    * src/ww/yourhouse/myhouse/radio/*:
    - Renamed package.

2013-08-04  pads  <pads@myhouseyourhouse.net>

    * res/values/strings.xml
    - Use new stream URL.

    * AndroidManifest.xml:
    - Bump version to 1.0.3.

2011-05-22  pads  <pads@myhouseyourhouse.net>

    * AndroidManifest.xml:
    * src/net/yourhouse/myhouse/radio/RadioApp.java: